# proof-parcel

./: Cargo.toml  README.md  demo.md  deploy.sh  dfx.json  package-lock.json  package.json
HACK_BECAUSE_OF_ALLOW_JS/proofparcel_backend/: index.js  proofparcel_backend.did.js
HACK_BECAUSE_OF_ALLOW_JS/proofparcel_frontend/: index.js  proofparcel_frontend.did.js
src/proofparcel_backend/: Cargo.toml  proofparcel_backend.did
src/proofparcel_backend/src/: lib.rs
src/proofparcel_frontend/: App.vue  index.css  index.html  main.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
src/proofparcel_frontend/components/: ConfirmDelivery.vue  CreateDelivery.vue  Dashboard.vue  DeliveryDetails.vue  DeliveryTimeline.vue  MyDeliveries.vue  MyNFTs.vue  Profile.vue
src/proofparcel_frontend/src/: App.js
